2007-03-12  Quentin Mathe <qmathe@club-internet.fr>

	* Source/FrameworkSource/UKRunner.h:
	* Source/FrameworkSource/UKRunner.m:
	(-runTests:onObject:): Renamed and improved method runTests:onClass: to 
	support running tests either on an instance or a class object itself.
	(-runTestsInClass:): Updated to call runTests:onObject:. First with the 
	class itself and class methods then with an uninitialized instance and 
	instance methods.

2007-02-17  Yen-Ju Chen <yjchenx at gmail>

    * Move README.GNUstep to README.
    * Format README in reStructuredText.

2006-04-23  Quentin Mathe <qmathe@club-internet.fr>
    
    Updated to take in account recent Xcode versions and bumped 
    UnitKit (GNUstep) version to 1.2.
    * Source/UnitKit.xcodeproj: Updated path references to 
    'Source/FrameworkSource/Info.plist', 'Source/TestSource/UnitKitTests/Info.plist', 
    'Source/TestSource/TestFramework/Info.plist', 'Source/TestSource/TestBundle/Info.plist'
    and 'Source/XcodeIntegration/FileTemplates/TemplateInfo.plist'.
    * Source/XcodeIntegration/TargetTemplates/UnitKitBundle.trgttmpl:
    Replaced $BUILD_DIR by $TARGET_BUILD_DIR to have the correct tests bundle 
    path (in Run Script phase context).
    * Source/FrameworkSource/Info.plist: Bumped version.

2006-04-16  Quentin Mathe <qmathe@club-internet.fr>
    
    UnitKit project seems to be no longer supported on Mac OS X (version 2.0 
    being never been released), then it's probably time to include complete
    Mac OS X support (with Xcode project and integration) in our own version. 
    That means UnitKit (GNUstep) specific features can now be used with Xcode 
    projects out of the box.
    * Source/UnitKit.xcodeproj
    * Source/XcodeIntegration/TargetTemplates/UnitKitBundle.trgttmpl:
    * Source/XcodeIntegration/FileTemplates/class.m:
    * Source/XcodeIntegration/FileTemplates/TemplateInfo.plist:
    * Source/XcodeIntegration/FileTemplates/class.h:
    * Source/Package/Info.plist: